welcome.lessons.welcome.methods.picture.PictureMono3.scala.error
PictureMono3:1: error: Missing closing brace `}' assumed here
def peinture() {
^PictureMono3:1: error: expected class or object definition
def peinture() {
^PictureMono3:5: error: expected class or object definition
def faireV() {
^PictureMono3:21: error: expected class or object definition
def avance7() {
^PictureMono3:27: error: expected class or object definition
def monte() {
^PictureMono3:33: error: expected class or object definition
def faireMotif() {
^PictureMono3:38: error: expected class or object definition
def avance21() { 
^PictureMono3:44: error: expected class or object definition
def faireMotif9 () {
^PictureMono3:53: error: expected start of definition
override def run() {
         ^